[package]
name = "polygon-rs"
version = "1.0.1"
authors = ["Stephen Romano <thestephenromano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
flate2 = "1.0"
hostname = "0.4"
smallvec = "1.15"

[features]
default = []
# Enable ZeroMQ sink support (requires libzmq on the system)
zmq-sink = ["zmq"]
# Enable NNG sink support (requires libnng on the system)
nng-sink = ["nng"]

[dependencies.zmq]
version = "0.10"
optional = true

[dependencies.nng]
version = "1.0"
optional = true
