[package]
name = "polygon-rs"
version = "1.0.0"
authors = ["Stephen Romano <thestephenromano@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-or-later"
description = "High-performance WebSocket streamer for Polygon.io market data with multiple sink options"
repository = "https://github.com/MorphIQ-Labs/polygon-streams"
keywords = ["polygon", "websocket", "market-data", "streaming", "finance"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
flate2 = "1.0"
hostname = "0.4"
smallvec = "1.15"
zmq = { version = "0.10", optional = true }
nng = { version = "1.0", optional = true }

[features]
default = []
# Enable ZeroMQ sink support (requires libzmq on the system)
zmq-sink = ["zmq"]
# Enable NNG sink support (requires libnng on the system)
nng-sink = ["nng"]
